Updates from Overleaf

--- a/doc/sections/results.tex
+++ b/doc/sections/results.tex
@@ -39,7 +39,7 @@ Figure \ref{fig:result_reg_plots} shows the predictions of this data, using diff
     \label{fig:result_reg_plots}
 \end{figure}
 
-The confidence intervals was also calculated and can be seen in figure \ref{fig:ols}
+The confidence intervals was also calculated and can be seen in figure \ref{fig:OLS_CI_franke}.
 
 \begin{figure}[H]
  \centering
