--- a/doc/sections/introduction.tex
+++ b/doc/sections/introduction.tex
@@ -2,8 +2,8 @@
 
 \begin{document}
 \section{Introduction}\label{sec:introduction}
-Modern science, including physics, is hallmarked by the availability of large datasets, making data analysis an important field of study. ...
-Nevertheless, applying the concepts and tools used in machine learning can be difficult with common pitfalls as under- and overfitting and human bias affecting the models.
+Modern science, including physics, is hallmarked by the availability of large datasets, making data analysis an important field of study. Machine learning provides methods 
+Nevertheless, applying the concepts and tools used in machine learning can be difficult with common pitfalls as under- and overfitting and human bias affecting the models. Thus, ... 
 
 The motivation of this project is to explore a number of different methods which is quite popular within the field of machine learning. The methods that will be explored are the ordinary least square method (OLS), ridge regression and LASSO regression which will be used to find unknown parameters when performing interpolation and fitting tasks. The methods will be tested on a two-dimensional function called Franke’s function.
 
