Updates from Overleaf

--- a/doc/sections/results.tex
+++ b/doc/sections/results.tex
@@ -13,7 +13,7 @@ We use a dataset of $N=100$ datapoints generated from the Franke function (inclu
     \label{fig:result_actual_plot}
 \end{figure}
 
-Figure \ref{fig:result_reg_plots} shows the predictions of this data, using different regression methods. There's some apparent overfitting in the OLS regressed model. The Ridge model comes quite close, while the Lasso does not give any satisfactory results. 
+Figure \ref{fig:result_reg_plots} shows the predictions of this data, using different regression methods. The design matrix used goes up to degree $12$. There's some apparent overfitting in the OLS regressed model. The Ridge model comes quite close, while the Lasso does not give any satisfactory results. 
 
 \begin{figure}[htb!]
     \centering
