--- a/doc/sections/conclusion.tex
+++ b/doc/sections/conclusion.tex
@@ -2,8 +2,7 @@
 
 \begin{document}
 \section{Conclusion}\label{sec:conclusion}
-After applying the three different regression models to the terrain data, various types of data, both  Franke's function and real life terrain data, it is easy to see that all three models can be used to regress data as long as the parameters are chosen carefully. Even though the best parameters are chosen carefully, the models naturally have different success rate. In this article it has been concluded that for the data analyzed, the best regression method was Ridge regression, closely followed by LASSO regression, and OLS at last.\\
+The aim of this work was to gain a further understanding of machine learning concepts and tools by studying three regression methods. After applying the three different regression models to both Franke's function and the real life terrain data, we conclude that they produce satisfactory predictions in both cases, as long as the parameters are chosen carefully. An exception would be the Lasso prediction of the Franke function, which we did not have the time to debug. For the terrain data, we conclude that the best regression method was Ridge regression, closely followed by LASSO regression and OLS being the most inaccurate.
 
-For the future it would be interesting to try the methods on different data sets and see how the results are dependent of the dataset. Another task for the future would be to run the methods on a powerful computer, providing the opportunity to analyze the whole terrain dataset instead of the small part of it.
-
+An interesting prospect for the future could be to try these methods on different datasets, to see how they fare in other scenarios. Given more time and computing power, we could also analyze the whole terrain dataset instead of only the small part we've used.
 \end{document}
