--- a/doc/sections/introduction.tex
+++ b/doc/sections/introduction.tex
@@ -2,12 +2,12 @@
 
 \begin{document}
 \section{Introduction}\label{sec:introduction}
-Modern science, including physics, is hallmarked by the availability of large datasets, making data analysis an important field of study. Machine learning provides methods 
-Nevertheless, applying the concepts and tools used in machine learning can be difficult with common pitfalls as under- and overfitting and human bias affecting the models. Thus, ... 
+Modern science, including physics, is hallmarked by the availability of large datasets, making data analysis an important field of study. Machine learning provides us with methods to learn from and make predictions about datasets. 
+Nevertheless, applying the concepts and tools used in machine learning can be difficult with common pitfalls as under- and overfitting and human bias affecting the models. Thus, it is increasingly relevant for physicists to have a thorough understanding of machine learning.  
 
-The motivation of this project is to explore a number of different methods which is quite popular within the field of machine learning. The methods that will be explored are the ordinary least square method (OLS), ridge regression and LASSO regression which will be used to find unknown parameters when performing interpolation and fitting tasks. The methods will be tested on a two-dimensional function called Franke’s function.
+The purpose of this project is to explore a number of different regression methods which is quite popular within the field of machine learning. The methods that will be explored are the ordinary least square method (OLS), Ridge and Lasso regression which will all be used to find unknown parameters when performing interpolation and fitting tasks. The methods will be tested on a two-dimensional function called Franke’s function.
 
-After the methods are settled and ready to go, a few different resampling techniques will be combined with the methods to evaluate the effectiveness. The resampling techniques to be used are the bootstrap method and the cross-validation method. The Bias-Variance trade off will also be studied in the article.
+After the methods are settled and ready to go, a few different resampling techniques will be combined with the methods to evaluate the effectiveness. The resampling techniques to be used are the bootstrap method and the cross-validation method. The bias-variance trade off will also be studied in the article.
 
 To finish of the project, the different methods will be tested on digital terrain data which descends from real life landscape.
 \end{document}
