Updates from Overleaf

--- a/doc/sections/abstract.tex
+++ b/doc/sections/abstract.tex
@@ -3,7 +3,7 @@
 \begin{document}
 
 \begin{abstract}\label{sec:abstract}
-This report studies three linear regression methods - ordinary least squares, Ridge and the Lasso - with the purpose of modelling existing data, assessing the perfomance of said model and predicting new unknown data. The modelled data are a set generated from the analytical "Franke function" along with a real terrain dataset showing the Oslofjord. Our results are mostly satisfactory and the models succeed in predicting new data, the exception being a faulty prediction of the Franke function by our Lasso implementation.
+This report studies three linear regression methods - ordinary least squares, Ridge and the Lasso - with the purpose of modelling existing data, assessing the perfomance of said model and predicting new unknown data. The modelled data are a set generated from the analytical "Franke function" along with a real terrain dataset. Our results are mostly satisfactory and the models succeed in predicting new data, the exception being a faulty prediction of the Franke function by our Lasso implementation.
 \end{abstract}
 
 \end{document}
